--- a/src/main/resources/building.yml
+++ b/src/main/resources/building.yml
@@ -1,183 +1,880 @@
 # Building Blocks Category Configuration
 category:
   display-name: "Building Blocks"
-  icon: STONE
-  tax-rate: 10.0  # Tax rate as percentage for this category
+  icon: BRICKS
+  tax-rate: 10.0
 
-# Default values for all items in this category
 defaults:
   min-stock: 0
   max-stock: 10000
   initial-stock: 100
 
-# Items in this category
 items:
+  # --- Stones & Earth ---
   STONE:
     price: 2.0
-    max-stock: 15000
-
+    max-stock: 20000
   COBBLESTONE:
     price: 1.5
-    max-stock: 20000
-
+    max-stock: 30000
+  MOSSY_COBBLESTONE:
+    price: 3.0
+  SMOOTH_STONE:
+    price: 3.0
+  STONE_BRICKS:
+    price: 2.2
+  MOSSY_STONE_BRICKS:
+    price: 3.0
+  CRACKED_STONE_BRICKS:
+    price: 3.0
+  CHISELED_STONE_BRICKS:
+    price: 3.5
   GRANITE:
     price: 3.0
-
+  POLISHED_GRANITE:
+    price: 3.5
   DIORITE:
     price: 3.0
-
+  POLISHED_DIORITE:
+    price: 3.5
   ANDESITE:
     price: 3.0
-
+  POLISHED_ANDESITE:
+    price: 3.5
+  DEEPSLATE:
+    price: 2.5
+  COBBLED_DEEPSLATE:
+    price: 2.0
+  POLISHED_DEEPSLATE:
+    price: 3.0
+  DEEPSLATE_BRICKS:
+    price: 3.0
+  DEEPSLATE_TILES:
+    price: 3.0
+  CHISELED_DEEPSLATE:
+    price: 3.5
+  CRACKED_DEEPSLATE_BRICKS:
+    price: 3.0
+  CRACKED_DEEPSLATE_TILES:
+    price: 3.0
+  REINFORCED_DEEPSLATE:
+    price: 100.0
+  TUFF:
+    price: 2.0
+  POLISHED_TUFF:
+    price: 2.5
+  TUFF_BRICKS:
+    price: 2.5
+  TUFF_SLAB:
+    price: 1.5
+  CALCITE:
+    price: 5.0
+  DRIPSTONE_BLOCK:
+    price: 3.0
+  POINTED_DRIPSTONE:
+    price: 1.0
   DIRT:
     price: 1.0
-    max-stock: 25000
-
-  GRASS_BLOCK:
+    max-stock: 30000
+  COARSE_DIRT:
+    price: 1.5
+  PODZOL:
+    price: 2.5
+  ROOTED_DIRT:
+    price: 1.5
+  MUD:
+    price: 1.4
+  PACKED_MUD:
     price: 2.0
+  MUD_BRICKS:
+    price: 2.5
+  CLAY:
+    price: 7.0
+  GRASS_BLOCK:
+    price: 3.0
+  MYCELIUM:
+    price: 5.0
+  SNOW_BLOCK:
+    price: 2.0
+  ICE:
+    price: 5.0
+  PACKED_ICE:
+    price: 15.0
+  BLUE_ICE:
+    price: 45.0
 
+  # --- Deep Dark ---
+  SCULK:
+    price: 10.0
+  SCULK_VEIN:
+    price: 2.0
+  SCULK_CATALYST:
+    price: 150.0
+  SCULK_SHRIEKER:
+    price: 200.0
+
+  # --- Sands & Gravel ---
+  GRAVEL:
+    price: 3.0
+    max-stock: 20000
+  SAND:
+    price: 2.0
+    max-stock: 20000
+  SANDSTONE:
+    price: 10.0
+  SMOOTH_SANDSTONE:
+    price: 12.0
+  CUT_SANDSTONE:
+    price: 12.0
+  CHISELED_SANDSTONE:
+    price: 12.0
+  RED_SAND:
+    price: 3.0
+  RED_SANDSTONE:
+    price: 14.0
+  SMOOTH_RED_SANDSTONE:
+    price: 16.0
+  CUT_RED_SANDSTONE:
+    price: 16.0
+  CHISELED_RED_SANDSTONE:
+    price: 16.0
+
+  # --- Wood Logs ---
   OAK_LOG:
     price: 5.0
     max-stock: 5000
-
   SPRUCE_LOG:
     price: 5.0
-    max-stock: 5000
-
   BIRCH_LOG:
     price: 5.0
-    max-stock: 5000
-
   JUNGLE_LOG:
     price: 5.0
-    max-stock: 5000
-
   ACACIA_LOG:
     price: 5.0
-    max-stock: 5000
-
   DARK_OAK_LOG:
     price: 5.0
-    max-stock: 5000
-
   MANGROVE_LOG:
     price: 6.0
-    max-stock: 4000
-
   CHERRY_LOG:
-    price: 7.0
-    max-stock: 3000
+    price: 6.0
+  CRIMSON_STEM:
+    price: 6.0
+  WARPED_STEM:
+    price: 6.0
+  STRIPPED_OAK_LOG:
+    price: 5.5
+  STRIPPED_SPRUCE_LOG:
+    price: 5.5
+  STRIPPED_BIRCH_LOG:
+    price: 5.5
+  STRIPPED_JUNGLE_LOG:
+    price: 5.5
+  STRIPPED_ACACIA_LOG:
+    price: 5.5
+  STRIPPED_DARK_OAK_LOG:
+    price: 5.5
+  STRIPPED_MANGROVE_LOG:
+    price: 6.5
+  STRIPPED_CHERRY_LOG:
+    price: 6.5
+  STRIPPED_CRIMSON_STEM:
+    price: 6.5
+  STRIPPED_WARPED_STEM:
+    price: 6.5
 
+  # --- Wood Planks ---
   OAK_PLANKS:
     price: 1.5
-
+    max-stock: 10000
   SPRUCE_PLANKS:
     price: 1.5
-
   BIRCH_PLANKS:
     price: 1.5
-
   JUNGLE_PLANKS:
     price: 1.5
-
   ACACIA_PLANKS:
     price: 1.5
-
   DARK_OAK_PLANKS:
     price: 1.5
-
   MANGROVE_PLANKS:
+    price: 1.8
+  CHERRY_PLANKS:
+    price: 1.8
+  BAMBOO_PLANKS:
+    price: 5.0
+  BAMBOO_MOSAIC:
+    price: 5.0
+  CRIMSON_PLANKS:
+    price: 2.0
+  WARPED_PLANKS:
     price: 2.0
 
-  CHERRY_PLANKS:
+  # --- Stairs ---
+  OAK_STAIRS:
+    price: 2.5
+  SPRUCE_STAIRS:
+    price: 2.5
+  BIRCH_STAIRS:
+    price: 2.5
+  JUNGLE_STAIRS:
+    price: 2.5
+  ACACIA_STAIRS:
+    price: 2.5
+  DARK_OAK_STAIRS:
+    price: 2.5
+  MANGROVE_STAIRS:
+    price: 3.0
+  CHERRY_STAIRS:
+    price: 3.0
+  BAMBOO_STAIRS:
+    price: 8.0
+  BAMBOO_MOSAIC_STAIRS:
+    price: 8.0
+  CRIMSON_STAIRS:
+    price: 3.0
+  WARPED_STAIRS:
+    price: 3.0
+  STONE_STAIRS:
+    price: 3.0
+  COBBLESTONE_STAIRS:
+    price: 2.5
+  MOSSY_COBBLESTONE_STAIRS:
+    price: 4.5
+  STONE_BRICK_STAIRS:
+    price: 3.5
+  MOSSY_STONE_BRICK_STAIRS:
+    price: 4.5
+  GRANITE_STAIRS:
+    price: 4.5
+  DIORITE_STAIRS:
+    price: 4.5
+  ANDESITE_STAIRS:
+    price: 4.5
+  POLISHED_GRANITE_STAIRS:
+    price: 5.5
+  POLISHED_DIORITE_STAIRS:
+    price: 5.5
+  POLISHED_ANDESITE_STAIRS:
+    price: 5.5
+  COBBLED_DEEPSLATE_STAIRS:
+    price: 3.0
+  POLISHED_DEEPSLATE_STAIRS:
+    price: 4.5
+  DEEPSLATE_BRICK_STAIRS:
+    price: 4.5
+  DEEPSLATE_TILE_STAIRS:
+    price: 4.5
+  SANDSTONE_STAIRS:
+    price: 15.0
+  SMOOTH_SANDSTONE_STAIRS:
+    price: 18.0
+  RED_SANDSTONE_STAIRS:
+    price: 21.0
+  SMOOTH_RED_SANDSTONE_STAIRS:
+    price: 24.0
+  BRICK_STAIRS:
+    price: 12.0
+  NETHER_BRICK_STAIRS:
+    price: 6.0
+  RED_NETHER_BRICK_STAIRS:
+    price: 9.0
+  QUARTZ_STAIRS:
+    price: 33.0
+  SMOOTH_QUARTZ_STAIRS:
+    price: 33.0
+  PURPUR_STAIRS:
+    price: 12.0
+  PRISMARINE_STAIRS:
+    price: 40.0
+  PRISMARINE_BRICK_STAIRS:
+    price: 85.0
+  DARK_PRISMARINE_STAIRS:
+    price: 90.0
+  MUD_BRICK_STAIRS:
+    price: 4.0
+  BLACKSTONE_STAIRS:
+    price: 4.0
+  POLISHED_BLACKSTONE_STAIRS:
+    price: 4.5
+  POLISHED_BLACKSTONE_BRICK_STAIRS:
+    price: 4.5
+
+  # --- Slabs ---
+  OAK_SLAB:
+    price: 1.0
+  SPRUCE_SLAB:
+    price: 1.0
+  BIRCH_SLAB:
+    price: 1.0
+  JUNGLE_SLAB:
+    price: 1.0
+  ACACIA_SLAB:
+    price: 1.0
+  DARK_OAK_SLAB:
+    price: 1.0
+  MANGROVE_SLAB:
+    price: 1.2
+  CHERRY_SLAB:
+    price: 1.2
+  BAMBOO_SLAB:
+    price: 2.5
+  BAMBOO_MOSAIC_SLAB:
+    price: 2.5
+  CRIMSON_SLAB:
+    price: 1.2
+  WARPED_SLAB:
+    price: 1.2
+  STONE_SLAB:
+    price: 1.3
+  SMOOTH_STONE_SLAB:
+    price: 1.5
+  COBBLESTONE_SLAB:
+    price: 1.0
+  MOSSY_COBBLESTONE_SLAB:
+    price: 1.5
+  STONE_BRICK_SLAB:
+    price: 1.5
+  MOSSY_STONE_BRICK_SLAB:
+    price: 1.5
+  GRANITE_SLAB:
+    price: 1.5
+  DIORITE_SLAB:
+    price: 1.5
+  ANDESITE_SLAB:
+    price: 1.5
+  POLISHED_GRANITE_SLAB:
+    price: 2.0
+  POLISHED_DIORITE_SLAB:
+    price: 2.0
+  POLISHED_ANDESITE_SLAB:
+    price: 2.0
+  COBBLED_DEEPSLATE_SLAB:
+    price: 1.0
+  POLISHED_DEEPSLATE_SLAB:
+    price: 1.5
+  DEEPSLATE_BRICK_SLAB:
+    price: 1.5
+  DEEPSLATE_TILE_SLAB:
+    price: 1.5
+  SANDSTONE_SLAB:
+    price: 5.0
+  SMOOTH_SANDSTONE_SLAB:
+    price: 6.0
+  CUT_SANDSTONE_SLAB:
+    price: 6.0
+  RED_SANDSTONE_SLAB:
+    price: 7.0
+  SMOOTH_RED_SANDSTONE_SLAB:
+    price: 8.0
+  CUT_RED_SANDSTONE_SLAB:
+    price: 8.0
+  BRICK_SLAB:
+    price: 4.0
+  NETHER_BRICK_SLAB:
+    price: 2.0
+  RED_NETHER_BRICK_SLAB:
+    price: 3.0
+  QUARTZ_SLAB:
+    price: 11.0
+  SMOOTH_QUARTZ_SLAB:
+    price: 11.0
+  PURPUR_SLAB:
+    price: 4.0
+  PRISMARINE_SLAB:
+    price: 13.0
+  PRISMARINE_BRICK_SLAB:
+    price: 28.0
+  DARK_PRISMARINE_SLAB:
+    price: 28.0
+  MUD_BRICK_SLAB:
+    price: 1.5
+  BLACKSTONE_SLAB:
+    price: 1.5
+  POLISHED_BLACKSTONE_SLAB:
+    price: 1.5
+  POLISHED_BLACKSTONE_BRICK_SLAB:
+    price: 1.5
+
+  # --- Fences & Walls ---
+  OAK_FENCE:
+    price: 2.5
+  SPRUCE_FENCE:
+    price: 2.5
+  BIRCH_FENCE:
+    price: 2.5
+  JUNGLE_FENCE:
+    price: 2.5
+  ACACIA_FENCE:
+    price: 2.5
+  DARK_OAK_FENCE:
+    price: 2.5
+  MANGROVE_FENCE:
+    price: 3.0
+  CHERRY_FENCE:
+    price: 3.0
+  BAMBOO_FENCE:
+    price: 6.0
+  CRIMSON_FENCE:
+    price: 3.0
+  WARPED_FENCE:
+    price: 3.0
+  NETHER_BRICK_FENCE:
+    price: 5.0
+  COBBLESTONE_WALL:
+    price: 2.0
+  MOSSY_COBBLESTONE_WALL:
+    price: 3.5
+  STONE_BRICK_WALL:
+    price: 2.5
+  MOSSY_STONE_BRICK_WALL:
+    price: 3.5
+  GRANITE_WALL:
+    price: 3.0
+  DIORITE_WALL:
+    price: 3.0
+  ANDESITE_WALL:
+    price: 3.0
+  SANDSTONE_WALL:
+    price: 10.0
+  RED_SANDSTONE_WALL:
+    price: 14.0
+  BRICK_WALL:
+    price: 8.0
+  PRISMARINE_WALL:
+    price: 25.0
+  NETHER_BRICK_WALL:
+    price: 4.0
+  RED_NETHER_BRICK_WALL:
+    price: 6.0
+  END_STONE_BRICK_WALL:
+    price: 6.0
+  POLISHED_BLACKSTONE_WALL:
+    price: 3.0
+  POLISHED_BLACKSTONE_BRICK_WALL:
+    price: 3.0
+  DEEPSLATE_WALL:
+    price: 2.5
+  POLISHED_DEEPSLATE_WALL:
+    price: 3.0
+  DEEPSLATE_BRICK_WALL:
+    price: 3.0
+  DEEPSLATE_TILE_WALL:
+    price: 3.0
+  MUD_BRICK_WALL:
     price: 2.5
 
-  SAND:
-    price: 2.0
-    max-stock: 15000
+  # --- Copper ---
+  COPPER_BLOCK:
+    price: 108.0
+  EXPOSED_COPPER:
+    price: 108.0
+  WEATHERED_COPPER:
+    price: 108.0
+  OXIDIZED_COPPER:
+    price: 108.0
+  CUT_COPPER:
+    price: 108.0
+  EXPOSED_CUT_COPPER:
+    price: 108.0
+  WEATHERED_CUT_COPPER:
+    price: 108.0
+  OXIDIZED_CUT_COPPER:
+    price: 108.0
+  WAXED_COPPER_BLOCK:
+    price: 110.0
+  WAXED_EXPOSED_COPPER:
+    price: 110.0
+  WAXED_WEATHERED_COPPER:
+    price: 110.0
+  WAXED_OXIDIZED_COPPER:
+    price: 110.0
+  WAXED_CUT_COPPER:
+    price: 110.0
+  WAXED_EXPOSED_CUT_COPPER:
+    price: 110.0
+  WAXED_WEATHERED_CUT_COPPER:
+    price: 110.0
+  WAXED_OXIDIZED_CUT_COPPER:
+    price: 110.0
 
-  RED_SAND:
-    price: 3.0
-    max-stock: 10000
-
-  GRAVEL:
-    price: 2.0
-    max-stock: 15000
-
-  GLASS:
-    price: 3.0
-
-  BRICKS:
-    price: 10.0
-    max-stock: 3000
-
-  STONE_BRICKS:
-    price: 4.0
-
+  # --- Nether & End Blocks ---
+  NETHERRACK:
+    price: 1.0
   NETHER_BRICKS:
-    price: 15.0
-    max-stock: 2000
-
-  QUARTZ_BLOCK:
-    price: 20.0
-    max-stock: 1000
-
-  TERRACOTTA:
-    price: 5.0
-
-  WHITE_CONCRETE:
     price: 4.0
-
-  WHITE_WOOL:
-    price: 8.0
-    max-stock: 5000
-
-  DEEPSLATE:
-    price: 3.0
-
-  CALCITE:
-    price: 5.0
-    max-stock: 3000
-
-  TUFF:
-    price: 2.0
-
-  BLACKSTONE:
-    price: 4.0
-    max-stock: 5000
-
+  RED_NETHER_BRICKS:
+    price: 6.0
   BASALT:
+    price: 2.0
+  POLISHED_BASALT:
     price: 3.0
-    max-stock: 8000
-
-  PRISMARINE:
-    price: 15.0
-    max-stock: 2000
-
-  DARK_PRISMARINE:
-    price: 20.0
-    max-stock: 1500
-
-  SEA_LANTERN:
+  SMOOTH_BASALT:
+    price: 3.0
+  BLACKSTONE:
+    price: 2.5
+  POLISHED_BLACKSTONE:
+    price: 3.0
+  GILDED_BLACKSTONE:
     price: 50.0
-    max-stock: 500
-
-  END_STONE:
-    price: 10.0
-    max-stock: 3000
-
-  END_STONE_BRICKS:
-    price: 15.0
-    max-stock: 2000
-
-  PURPUR_BLOCK:
-    price: 25.0
-    max-stock: 1000
-
+  SOUL_SAND:
+    price: 2.5
+  SOUL_SOIL:
+    price: 2.5
+  MAGMA_BLOCK:
+    price: 5.0
   OBSIDIAN:
     price: 20.0
-    max-stock: 2000
-
   CRYING_OBSIDIAN:
+    price: 40.0
+  SHROOMLIGHT:
+    price: 25.0
+  GLOWSTONE:
+    price: 15.0
+  OCHRE_FROGLIGHT:
     price: 50.0
-    max-stock: 500
+  PEARLESCENT_FROGLIGHT:
+    price: 50.0
+  VERDANT_FROGLIGHT:
+    price: 50.0
+  END_STONE:
+    price: 5.0
+  END_STONE_BRICKS:
+    price: 6.0
+  PURPUR_BLOCK:
+    price: 8.0
+  PURPUR_PILLAR:
+    price: 8.0
+
+  # --- Glass ---
+  GLASS:
+    price: 2.5
+  GLASS_PANE:
+    price: 1.0
+  WHITE_STAINED_GLASS:
+    price: 4.0
+  ORANGE_STAINED_GLASS:
+    price: 4.0
+  MAGENTA_STAINED_GLASS:
+    price: 4.0
+  LIGHT_BLUE_STAINED_GLASS:
+    price: 4.0
+  YELLOW_STAINED_GLASS:
+    price: 4.0
+  LIME_STAINED_GLASS:
+    price: 4.0
+  PINK_STAINED_GLASS:
+    price: 4.0
+  GRAY_STAINED_GLASS:
+    price: 4.0
+  LIGHT_GRAY_STAINED_GLASS:
+    price: 4.0
+  CYAN_STAINED_GLASS:
+    price: 4.0
+  PURPLE_STAINED_GLASS:
+    price: 4.0
+  BLUE_STAINED_GLASS:
+    price: 4.0
+  BROWN_STAINED_GLASS:
+    price: 4.0
+  GREEN_STAINED_GLASS:
+    price: 4.0
+  RED_STAINED_GLASS:
+    price: 4.0
+  BLACK_STAINED_GLASS:
+    price: 4.0
+  TINTED_GLASS:
+    price: 15.0
+  WHITE_STAINED_GLASS_PANE:
+    price: 2.0
+  ORANGE_STAINED_GLASS_PANE:
+    price: 2.0
+  MAGENTA_STAINED_GLASS_PANE:
+    price: 2.0
+  LIGHT_BLUE_STAINED_GLASS_PANE:
+    price: 2.0
+  YELLOW_STAINED_GLASS_PANE:
+    price: 2.0
+  LIME_STAINED_GLASS_PANE:
+    price: 2.0
+  PINK_STAINED_GLASS_PANE:
+    price: 2.0
+  GRAY_STAINED_GLASS_PANE:
+    price: 2.0
+  LIGHT_GRAY_STAINED_GLASS_PANE:
+    price: 2.0
+  CYAN_STAINED_GLASS_PANE:
+    price: 2.0
+  PURPLE_STAINED_GLASS_PANE:
+    price: 2.0
+  BLUE_STAINED_GLASS_PANE:
+    price: 2.0
+  BROWN_STAINED_GLASS_PANE:
+    price: 2.0
+  GREEN_STAINED_GLASS_PANE:
+    price: 2.0
+  RED_STAINED_GLASS_PANE:
+    price: 2.0
+  BLACK_STAINED_GLASS_PANE:
+    price: 2.0
+
+  # --- Wool ---
+  WHITE_WOOL:
+    price: 15.0
+  ORANGE_WOOL:
+    price: 15.0
+  MAGENTA_WOOL:
+    price: 15.0
+  LIGHT_BLUE_WOOL:
+    price: 15.0
+  YELLOW_WOOL:
+    price: 15.0
+  LIME_WOOL:
+    price: 15.0
+  PINK_WOOL:
+    price: 15.0
+  GRAY_WOOL:
+    price: 15.0
+  LIGHT_GRAY_WOOL:
+    price: 15.0
+  CYAN_WOOL:
+    price: 15.0
+  PURPLE_WOOL:
+    price: 15.0
+  BLUE_WOOL:
+    price: 15.0
+  BROWN_WOOL:
+    price: 15.0
+  GREEN_WOOL:
+    price: 15.0
+  RED_WOOL:
+    price: 15.0
+  BLACK_WOOL:
+    price: 15.0
+
+  # --- Carpets ---
+  WHITE_CARPET:
+    price: 10.0
+  ORANGE_CARPET:
+    price: 10.0
+  MAGENTA_CARPET:
+    price: 10.0
+  LIGHT_BLUE_CARPET:
+    price: 10.0
+  YELLOW_CARPET:
+    price: 10.0
+  LIME_CARPET:
+    price: 10.0
+  PINK_CARPET:
+    price: 10.0
+  GRAY_CARPET:
+    price: 10.0
+  LIGHT_GRAY_CARPET:
+    price: 10.0
+  CYAN_CARPET:
+    price: 10.0
+  PURPLE_CARPET:
+    price: 10.0
+  BLUE_CARPET:
+    price: 10.0
+  BROWN_CARPET:
+    price: 10.0
+  GREEN_CARPET:
+    price: 10.0
+  RED_CARPET:
+    price: 10.0
+  BLACK_CARPET:
+    price: 10.0
+  MOSS_CARPET:
+    price: 2.0
+
+  # --- Terracotta ---
+  TERRACOTTA:
+    price: 4.0
+  WHITE_TERRACOTTA:
+    price: 5.0
+  ORANGE_TERRACOTTA:
+    price: 5.0
+  MAGENTA_TERRACOTTA:
+    price: 5.0
+  LIGHT_BLUE_TERRACOTTA:
+    price: 5.0
+  YELLOW_TERRACOTTA:
+    price: 5.0
+  LIME_TERRACOTTA:
+    price: 5.0
+  PINK_TERRACOTTA:
+    price: 5.0
+  GRAY_TERRACOTTA:
+    price: 5.0
+  LIGHT_GRAY_TERRACOTTA:
+    price: 5.0
+  CYAN_TERRACOTTA:
+    price: 5.0
+  PURPLE_TERRACOTTA:
+    price: 5.0
+  BLUE_TERRACOTTA:
+    price: 5.0
+  BROWN_TERRACOTTA:
+    price: 5.0
+  GREEN_TERRACOTTA:
+    price: 5.0
+  RED_TERRACOTTA:
+    price: 5.0
+  BLACK_TERRACOTTA:
+    price: 5.0
+
+  # --- Glazed Terracotta ---
+  WHITE_GLAZED_TERRACOTTA:
+    price: 5.5
+  ORANGE_GLAZED_TERRACOTTA:
+    price: 5.5
+  MAGENTA_GLAZED_TERRACOTTA:
+    price: 5.5
+  LIGHT_BLUE_GLAZED_TERRACOTTA:
+    price: 5.5
+  YELLOW_GLAZED_TERRACOTTA:
+    price: 5.5
+  LIME_GLAZED_TERRACOTTA:
+    price: 5.5
+  PINK_GLAZED_TERRACOTTA:
+    price: 5.5
+  GRAY_GLAZED_TERRACOTTA:
+    price: 5.5
+  LIGHT_GRAY_GLAZED_TERRACOTTA:
+    price: 5.5
+  CYAN_GLAZED_TERRACOTTA:
+    price: 5.5
+  PURPLE_GLAZED_TERRACOTTA:
+    price: 5.5
+  BLUE_GLAZED_TERRACOTTA:
+    price: 5.5
+  BROWN_GLAZED_TERRACOTTA:
+    price: 5.5
+  GREEN_GLAZED_TERRACOTTA:
+    price: 5.5
+  RED_GLAZED_TERRACOTTA:
+    price: 5.5
+  BLACK_GLAZED_TERRACOTTA:
+    price: 5.5
+
+  # --- Concrete ---
+  WHITE_CONCRETE:
+    price: 4.0
+  ORANGE_CONCRETE:
+    price: 4.0
+  MAGENTA_CONCRETE:
+    price: 4.0
+  LIGHT_BLUE_CONCRETE:
+    price: 4.0
+  YELLOW_CONCRETE:
+    price: 4.0
+  LIME_CONCRETE:
+    price: 4.0
+  PINK_CONCRETE:
+    price: 4.0
+  GRAY_CONCRETE:
+    price: 4.0
+  LIGHT_GRAY_CONCRETE:
+    price: 4.0
+  CYAN_CONCRETE:
+    price: 4.0
+  PURPLE_CONCRETE:
+    price: 4.0
+  BLUE_CONCRETE:
+    price: 4.0
+  BROWN_CONCRETE:
+    price: 4.0
+  GREEN_CONCRETE:
+    price: 4.0
+  RED_CONCRETE:
+    price: 4.0
+  BLACK_CONCRETE:
+    price: 4.0
+
+  # --- Concrete Powder ---
+  WHITE_CONCRETE_POWDER:
+    price: 3.5
+  ORANGE_CONCRETE_POWDER:
+    price: 3.5
+  MAGENTA_CONCRETE_POWDER:
+    price: 3.5
+  LIGHT_BLUE_CONCRETE_POWDER:
+    price: 3.5
+  YELLOW_CONCRETE_POWDER:
+    price: 3.5
+  LIME_CONCRETE_POWDER:
+    price: 3.5
+  PINK_CONCRETE_POWDER:
+    price: 3.5
+  GRAY_CONCRETE_POWDER:
+    price: 3.5
+  LIGHT_GRAY_CONCRETE_POWDER:
+    price: 3.5
+  CYAN_CONCRETE_POWDER:
+    price: 3.5
+  PURPLE_CONCRETE_POWDER:
+    price: 3.5
+  BLUE_CONCRETE_POWDER:
+    price: 3.5
+  BROWN_CONCRETE_POWDER:
+    price: 3.5
+  GREEN_CONCRETE_POWDER:
+    price: 3.5
+  RED_CONCRETE_POWDER:
+    price: 3.5
+  BLACK_CONCRETE_POWDER:
+    price: 3.5
+
+  # --- Constructed & Metal ---
+  BRICKS:
+    price: 8.0
+  PRISMARINE:
+    price: 25.0
+  PRISMARINE_BRICKS:
+    price: 55.0
+  DARK_PRISMARINE:
+    price: 55.0
+  SEA_LANTERN:
+    price: 60.0
+  QUARTZ_BLOCK:
+    price: 22.0
+  SMOOTH_QUARTZ:
+    price: 22.0
+  QUARTZ_BRICKS:
+    price: 22.0
+  QUARTZ_PILLAR:
+    price: 22.0
+  SPONGE:
+    price: 50.0
+  WET_SPONGE:
+    price: 40.0
+  DECORATED_POT:
+    price: 10.0
+  IRON_BARS:
+    price: 5.0
+  CHAIN:
+    price: 15.0
+  LANTERN:
+    price: 15.0
+  SOUL_LANTERN:
+    price: 15.0
+  CAMPFIRE:
+    price: 20.0
+  SOUL_CAMPFIRE:
+    price: 20.0
+  LADDER:
+    price: 2.0
+  SCAFFOLDING:
+    price: 2.0
+  BOOKSHELF:
+    price: 55.0
+  CHISELED_BOOKSHELF:
+    price: 16.0
+  RAIL:
+    price: 6.0
+  POWERED_RAIL:
+    price: 60.0
+  DETECTOR_RAIL:
+    price: 20.0
+  ACTIVATOR_RAIL:
+    price: 20.0
