--- a/src/main/resources/building.yml
+++ b/src/main/resources/building.yml
@@ -10,7 +10,9 @@ defaults:
   initial-stock: 100
 
 items:
-  # --- Stones & Earth ---
+  # =========================================
+  # NATURAL BLOCKS (Stones, Dirt, Sands)
+  # =========================================
   STONE:
     price: 2.0
     max-stock: 20000
@@ -21,52 +23,18 @@ items:
     price: 3.0
   SMOOTH_STONE:
     price: 3.0
-  STONE_BRICKS:
-    price: 2.2
-  MOSSY_STONE_BRICKS:
-    price: 3.0
-  CRACKED_STONE_BRICKS:
-    price: 3.0
-  CHISELED_STONE_BRICKS:
-    price: 3.5
   GRANITE:
     price: 3.0
-  POLISHED_GRANITE:
-    price: 3.5
   DIORITE:
     price: 3.0
-  POLISHED_DIORITE:
-    price: 3.5
   ANDESITE:
     price: 3.0
-  POLISHED_ANDESITE:
-    price: 3.5
   DEEPSLATE:
     price: 2.5
   COBBLED_DEEPSLATE:
     price: 2.0
-  POLISHED_DEEPSLATE:
-    price: 3.0
-  DEEPSLATE_BRICKS:
-    price: 3.0
-  DEEPSLATE_TILES:
-    price: 3.0
-  CHISELED_DEEPSLATE:
-    price: 3.5
-  CRACKED_DEEPSLATE_BRICKS:
-    price: 3.0
-  CRACKED_DEEPSLATE_TILES:
-    price: 3.0
-  REINFORCED_DEEPSLATE:
-    price: 100.0
   TUFF:
     price: 2.0
-  POLISHED_TUFF:
-    price: 2.5
-  TUFF_BRICKS:
-    price: 2.5
-  TUFF_SLAB:
-    price: 1.5
   CALCITE:
     price: 5.0
   DRIPSTONE_BLOCK:
@@ -86,8 +54,6 @@ items:
     price: 1.4
   PACKED_MUD:
     price: 2.0
-  MUD_BRICKS:
-    price: 2.5
   CLAY:
     price: 7.0
   GRASS_BLOCK:
@@ -102,24 +68,54 @@ items:
     price: 15.0
   BLUE_ICE:
     price: 45.0
-
-  # --- Deep Dark ---
-  SCULK:
-    price: 10.0
-  SCULK_VEIN:
-    price: 2.0
-  SCULK_CATALYST:
-    price: 150.0
-  SCULK_SHRIEKER:
-    price: 200.0
-
-  # --- Sands & Gravel ---
   GRAVEL:
     price: 3.0
     max-stock: 20000
   SAND:
     price: 2.0
     max-stock: 20000
+  RED_SAND:
+    price: 3.0
+
+  # =========================================
+  # POLISHED & BRICKS (Full Blocks)
+  # =========================================
+  STONE_BRICKS:
+    price: 2.2
+  MOSSY_STONE_BRICKS:
+    price: 3.0
+  CRACKED_STONE_BRICKS:
+    price: 3.0
+  CHISELED_STONE_BRICKS:
+    price: 3.5
+  POLISHED_GRANITE:
+    price: 3.5
+  POLISHED_DIORITE:
+    price: 3.5
+  POLISHED_ANDESITE:
+    price: 3.5
+  POLISHED_DEEPSLATE:
+    price: 3.0
+  DEEPSLATE_BRICKS:
+    price: 3.0
+  DEEPSLATE_TILES:
+    price: 3.0
+  CHISELED_DEEPSLATE:
+    price: 3.5
+  CRACKED_DEEPSLATE_BRICKS:
+    price: 3.0
+  CRACKED_DEEPSLATE_TILES:
+    price: 3.0
+  REINFORCED_DEEPSLATE:
+    price: 100.0
+  POLISHED_TUFF:
+    price: 2.5
+  TUFF_BRICKS:
+    price: 2.5
+  MUD_BRICKS:
+    price: 2.5
+  BRICKS:
+    price: 8.0
   SANDSTONE:
     price: 10.0
   SMOOTH_SANDSTONE:
@@ -128,8 +124,6 @@ items:
     price: 12.0
   CHISELED_SANDSTONE:
     price: 12.0
-  RED_SAND:
-    price: 3.0
   RED_SANDSTONE:
     price: 14.0
   SMOOTH_RED_SANDSTONE:
@@ -138,8 +132,82 @@ items:
     price: 16.0
   CHISELED_RED_SANDSTONE:
     price: 16.0
+  PRISMARINE:
+    price: 25.0
+  PRISMARINE_BRICKS:
+    price: 55.0
+  DARK_PRISMARINE:
+    price: 55.0
+  SEA_LANTERN:
+    price: 60.0
+  NETHERRACK:
+    price: 1.0
+  NETHER_BRICKS:
+    price: 4.0
+  RED_NETHER_BRICKS:
+    price: 6.0
+  CRACKED_NETHER_BRICKS:
+    price: 5.0
+  CHISELED_NETHER_BRICKS:
+    price: 7.0
+  BASALT:
+    price: 2.0
+  POLISHED_BASALT:
+    price: 3.0
+  SMOOTH_BASALT:
+    price: 3.0
+  BLACKSTONE:
+    price: 2.5
+  POLISHED_BLACKSTONE:
+    price: 3.0
+  POLISHED_BLACKSTONE_BRICKS:
+    price: 3.0
+  CRACKED_POLISHED_BLACKSTONE_BRICKS:
+    price: 3.0
+  CHISELED_POLISHED_BLACKSTONE:
+    price: 4.0
+  GILDED_BLACKSTONE:
+    price: 50.0
+  SOUL_SAND:
+    price: 2.5
+  SOUL_SOIL:
+    price: 2.5
+  MAGMA_BLOCK:
+    price: 5.0
+  OBSIDIAN:
+    price: 20.0
+  CRYING_OBSIDIAN:
+    price: 40.0
+  SHROOMLIGHT:
+    price: 25.0
+  GLOWSTONE:
+    price: 15.0
+  OCHRE_FROGLIGHT:
+    price: 50.0
+  PEARLESCENT_FROGLIGHT:
+    price: 50.0
+  VERDANT_FROGLIGHT:
+    price: 50.0
+  END_STONE:
+    price: 5.0
+  END_STONE_BRICKS:
+    price: 6.0
+  PURPUR_BLOCK:
+    price: 8.0
+  PURPUR_PILLAR:
+    price: 8.0
+  QUARTZ_BLOCK:
+    price: 22.0
+  SMOOTH_QUARTZ:
+    price: 22.0
+  QUARTZ_BRICKS:
+    price: 22.0
+  QUARTZ_PILLAR:
+    price: 22.0
 
-  # --- Wood Logs ---
+  # =========================================
+  # WOOD (Logs & Planks)
+  # =========================================
   OAK_LOG:
     price: 5.0
     max-stock: 5000
@@ -181,8 +249,6 @@ items:
     price: 6.5
   STRIPPED_WARPED_STEM:
     price: 6.5
-
-  # --- Wood Planks ---
   OAK_PLANKS:
     price: 1.5
     max-stock: 10000
@@ -209,7 +275,9 @@ items:
   WARPED_PLANKS:
     price: 2.0
 
-  # --- Stairs ---
+  # =========================================
+  # STAIRS (Grouped)
+  # =========================================
   OAK_STAIRS:
     price: 2.5
   SPRUCE_STAIRS:
@@ -274,6 +342,8 @@ items:
     price: 24.0
   BRICK_STAIRS:
     price: 12.0
+  MUD_BRICK_STAIRS:
+    price: 4.0
   NETHER_BRICK_STAIRS:
     price: 6.0
   RED_NETHER_BRICK_STAIRS:
@@ -290,8 +360,6 @@ items:
     price: 85.0
   DARK_PRISMARINE_STAIRS:
     price: 90.0
-  MUD_BRICK_STAIRS:
-    price: 4.0
   BLACKSTONE_STAIRS:
     price: 4.0
   POLISHED_BLACKSTONE_STAIRS:
@@ -299,7 +367,9 @@ items:
   POLISHED_BLACKSTONE_BRICK_STAIRS:
     price: 4.5
 
-  # --- Slabs ---
+  # =========================================
+  # SLABS (Grouped)
+  # =========================================
   OAK_SLAB:
     price: 1.0
   SPRUCE_SLAB:
@@ -356,6 +426,8 @@ items:
     price: 1.5
   DEEPSLATE_TILE_SLAB:
     price: 1.5
+  TUFF_SLAB:
+    price: 1.5
   SANDSTONE_SLAB:
     price: 5.0
   SMOOTH_SANDSTONE_SLAB:
@@ -370,6 +442,8 @@ items:
     price: 8.0
   BRICK_SLAB:
     price: 4.0
+  MUD_BRICK_SLAB:
+    price: 1.5
   NETHER_BRICK_SLAB:
     price: 2.0
   RED_NETHER_BRICK_SLAB:
@@ -386,8 +460,6 @@ items:
     price: 28.0
   DARK_PRISMARINE_SLAB:
     price: 28.0
-  MUD_BRICK_SLAB:
-    price: 1.5
   BLACKSTONE_SLAB:
     price: 1.5
   POLISHED_BLACKSTONE_SLAB:
@@ -395,31 +467,9 @@ items:
   POLISHED_BLACKSTONE_BRICK_SLAB:
     price: 1.5
 
-  # --- Fences & Walls ---
-  OAK_FENCE:
-    price: 2.5
-  SPRUCE_FENCE:
-    price: 2.5
-  BIRCH_FENCE:
-    price: 2.5
-  JUNGLE_FENCE:
-    price: 2.5
-  ACACIA_FENCE:
-    price: 2.5
-  DARK_OAK_FENCE:
-    price: 2.5
-  MANGROVE_FENCE:
-    price: 3.0
-  CHERRY_FENCE:
-    price: 3.0
-  BAMBOO_FENCE:
-    price: 6.0
-  CRIMSON_FENCE:
-    price: 3.0
-  WARPED_FENCE:
-    price: 3.0
-  NETHER_BRICK_FENCE:
-    price: 5.0
+  # =========================================
+  # WALLS (Grouped)
+  # =========================================
   COBBLESTONE_WALL:
     price: 2.0
   MOSSY_COBBLESTONE_WALL:
@@ -452,7 +502,7 @@ items:
     price: 3.0
   POLISHED_BLACKSTONE_BRICK_WALL:
     price: 3.0
-  DEEPSLATE_WALL:
+  COBBLED_DEEPSLATE_WALL:
     price: 2.5
   POLISHED_DEEPSLATE_WALL:
     price: 3.0
@@ -463,7 +513,59 @@ items:
   MUD_BRICK_WALL:
     price: 2.5
 
-  # --- Copper ---
+  # =========================================
+  # FENCES & GATES (Grouped)
+  # =========================================
+  OAK_FENCE:
+    price: 2.5
+  SPRUCE_FENCE:
+    price: 2.5
+  BIRCH_FENCE:
+    price: 2.5
+  JUNGLE_FENCE:
+    price: 2.5
+  ACACIA_FENCE:
+    price: 2.5
+  DARK_OAK_FENCE:
+    price: 2.5
+  MANGROVE_FENCE:
+    price: 3.0
+  CHERRY_FENCE:
+    price: 3.0
+  BAMBOO_FENCE:
+    price: 6.0
+  CRIMSON_FENCE:
+    price: 3.0
+  WARPED_FENCE:
+    price: 3.0
+  NETHER_BRICK_FENCE:
+    price: 5.0
+  OAK_FENCE_GATE:
+    price: 8.0
+  SPRUCE_FENCE_GATE:
+    price: 8.0
+  BIRCH_FENCE_GATE:
+    price: 8.0
+  JUNGLE_FENCE_GATE:
+    price: 8.0
+  ACACIA_FENCE_GATE:
+    price: 8.0
+  DARK_OAK_FENCE_GATE:
+    price: 8.0
+  MANGROVE_FENCE_GATE:
+    price: 8.0
+  CHERRY_FENCE_GATE:
+    price: 8.0
+  BAMBOO_FENCE_GATE:
+    price: 8.0
+  CRIMSON_FENCE_GATE:
+    price: 8.0
+  WARPED_FENCE_GATE:
+    price: 8.0
+
+  # =========================================
+  # COPPER (Grouped)
+  # =========================================
   COPPER_BLOCK:
     price: 108.0
   EXPOSED_COPPER:
@@ -497,59 +599,15 @@ items:
   WAXED_OXIDIZED_CUT_COPPER:
     price: 110.0
 
-  # --- Nether & End Blocks ---
-  NETHERRACK:
-    price: 1.0
-  NETHER_BRICKS:
-    price: 4.0
-  RED_NETHER_BRICKS:
-    price: 6.0
-  BASALT:
-    price: 2.0
-  POLISHED_BASALT:
-    price: 3.0
-  SMOOTH_BASALT:
-    price: 3.0
-  BLACKSTONE:
-    price: 2.5
-  POLISHED_BLACKSTONE:
-    price: 3.0
-  GILDED_BLACKSTONE:
-    price: 50.0
-  SOUL_SAND:
-    price: 2.5
-  SOUL_SOIL:
-    price: 2.5
-  MAGMA_BLOCK:
-    price: 5.0
-  OBSIDIAN:
-    price: 20.0
-  CRYING_OBSIDIAN:
-    price: 40.0
-  SHROOMLIGHT:
-    price: 25.0
-  GLOWSTONE:
-    price: 15.0
-  OCHRE_FROGLIGHT:
-    price: 50.0
-  PEARLESCENT_FROGLIGHT:
-    price: 50.0
-  VERDANT_FROGLIGHT:
-    price: 50.0
-  END_STONE:
-    price: 5.0
-  END_STONE_BRICKS:
-    price: 6.0
-  PURPUR_BLOCK:
-    price: 8.0
-  PURPUR_PILLAR:
-    price: 8.0
-
-  # --- Glass ---
+  # =========================================
+  # GLASS & PANES
+  # =========================================
   GLASS:
     price: 2.5
   GLASS_PANE:
     price: 1.0
+  TINTED_GLASS:
+    price: 15.0
   WHITE_STAINED_GLASS:
     price: 4.0
   ORANGE_STAINED_GLASS:
@@ -582,8 +640,6 @@ items:
     price: 4.0
   BLACK_STAINED_GLASS:
     price: 4.0
-  TINTED_GLASS:
-    price: 15.0
   WHITE_STAINED_GLASS_PANE:
     price: 2.0
   ORANGE_STAINED_GLASS_PANE:
@@ -617,7 +673,9 @@ items:
   BLACK_STAINED_GLASS_PANE:
     price: 2.0
 
-  # --- Wool ---
+  # =========================================
+  # WOOL, CARPET, CONCRETE, TERRACOTTA
+  # =========================================
   WHITE_WOOL:
     price: 15.0
   ORANGE_WOOL:
@@ -650,8 +708,6 @@ items:
     price: 15.0
   BLACK_WOOL:
     price: 15.0
-
-  # --- Carpets ---
   WHITE_CARPET:
     price: 10.0
   ORANGE_CARPET:
@@ -686,8 +742,6 @@ items:
     price: 10.0
   MOSS_CARPET:
     price: 2.0
-
-  # --- Terracotta ---
   TERRACOTTA:
     price: 4.0
   WHITE_TERRACOTTA:
@@ -722,8 +776,6 @@ items:
     price: 5.0
   BLACK_TERRACOTTA:
     price: 5.0
-
-  # --- Glazed Terracotta ---
   WHITE_GLAZED_TERRACOTTA:
     price: 5.5
   ORANGE_GLAZED_TERRACOTTA:
@@ -756,8 +808,6 @@ items:
     price: 5.5
   BLACK_GLAZED_TERRACOTTA:
     price: 5.5
-
-  # --- Concrete ---
   WHITE_CONCRETE:
     price: 4.0
   ORANGE_CONCRETE:
@@ -790,8 +840,6 @@ items:
     price: 4.0
   BLACK_CONCRETE:
     price: 4.0
-
-  # --- Concrete Powder ---
   WHITE_CONCRETE_POWDER:
     price: 3.5
   ORANGE_CONCRETE_POWDER:
@@ -825,31 +873,15 @@ items:
   BLACK_CONCRETE_POWDER:
     price: 3.5
 
-  # --- Constructed & Metal ---
-  BRICKS:
-    price: 8.0
-  PRISMARINE:
-    price: 25.0
-  PRISMARINE_BRICKS:
-    price: 55.0
-  DARK_PRISMARINE:
-    price: 55.0
-  SEA_LANTERN:
-    price: 60.0
-  QUARTZ_BLOCK:
-    price: 22.0
-  SMOOTH_QUARTZ:
-    price: 22.0
-  QUARTZ_BRICKS:
-    price: 22.0
-  QUARTZ_PILLAR:
-    price: 22.0
+  # =========================================
+  # DECOR & MISC
+  # =========================================
   SPONGE:
     price: 50.0
   WET_SPONGE:
     price: 40.0
   DECORATED_POT:
-    price: 10.0
+    price: 15.0
   IRON_BARS:
     price: 5.0
   CHAIN:
@@ -869,7 +901,7 @@ items:
   BOOKSHELF:
     price: 55.0
   CHISELED_BOOKSHELF:
-    price: 16.0
+    price: 40.0
   RAIL:
     price: 6.0
   POWERED_RAIL:
